--- a/modules/brief/brief.routing.yml
+++ b/modules/brief/brief.routing.yml
@@ -1,40 +1,40 @@
 brief.main:
   path: 'brief'
-  _defaults:
+  defaults:
     _title: 'Brief'
-    _content: '\Drupal\Brief\main'
-  _requirements:
+    _content: '\Drupal\brief\main'
+  requirements:
     _permission: 'access content'
 
 brief.add:
   path: 'brief/add'
-  _defaults:
+  defaults:
     _title: 'Add brief'
-    _form: '\Drupal\Brief\Forms\BriefAdd'
-  _requirements:
+    _form: '\Drupal\brief\Forms\BriefAdd'
+  requirements:
     _permission: 'brief create'
 
 brief.view:
   path: 'brief/{brief}'
-  _defaults:
-    _title_callback: '\Drupal\Brief\Controller\Brief::title'
-    _content: '\Drupal\Brief\Controller\Brief::view'
-  _requirements:
+  defaults:
+    _title_callback: '\Drupal\brief\Controller\Brief::title'
+    _content: '\Drupal\brief\Controller\Brief::view'
+  requirements:
     _permission: 'brief view'
 
 brief.edit:
   path: 'brief/{brief}/edit'
-  _defaults:
-    _title_callback: '\Drupal\Brief\Controller\Brief\title'
+  defaults:
+    _title_callback: '\Drupal\brief\Controller\Brief\title'
     edit: Yes
-    _form: '\Drupal\Brief\Forms\BriefEdit'
-  _requirements:
+    _form: '\Drupal\brief\Forms\BriefEdit'
+  requirements:
     _permission: 'brief edit'
 
 brief.delete:
   path: 'brief/{brief}/delete'
-  _defaults:
-    _title_callback: '\Drupal\Brief\Controller\Brief\title'
-    _form: 'Drupal\Brief\Forms\BriefDelete'
-  _requirements:
+  defaults:
+    _title_callback: '\Drupal\brief\Controller\Brief\title'
+    _form: 'Drupal\brief\Forms\BriefDelete'
+  requirements:
     _permission: 'brief edit'
